--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -13,12 +13,19 @@
     font-weight:900;
 }
 
+/* .logo .menu button:hover{
+    color: blue;
+} */
+
 .specific-color{
     color:#FD6E0A;
 }
 header{
     background-color: #FFF8F3;
     padding-top: 51px;
+    background: url("../images/developer.png"), url("../images/header_bg.png"),#FFF8F3;
+    background-repeat: no-repeat;
+    background-position:top left,bottom right;
 }
 
 nav{
@@ -54,4 +61,45 @@ nav .menu a{
     font-size: 20px;
     font-weight: bold;
     color: white;
+    cursor: pointer;
+}
+
+#banner{
+    /* border: 1px solid red; */
+    margin: 46px 38px 0px 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#banner .banner-content{
+    max-width: 585px;
+}
+
+#banner .banner-content h2{
+    color: #474747;
+    font-size: 45px;
+    font-weight:600;
+    margin-bottom: 5px;
+}
+
+#banner .banner-content h1{
+    color: black;
+    font-size: 85px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+#banner .banner-content p{
+    color: #757575;
+    font-size: 18px;
+    font-weight: 400px;
+    margin-bottom: 30px;
+
+}
+
+#banner .banner-img img{
+    max-width: 584px;
+    vertical-align: middle;
+
 }
