--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -103,3 +103,101 @@ nav .menu a{
     vertical-align: middle;
 
 }
+.section-heading{
+    max-width: 827px;
+    text-align: center;
+    margin: 0 auto;
+
+}
+
+.section-heading h2{
+    font-size: 35px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+.section-heading p{
+    font-size: 18px;
+    font-weight:400;
+    margin-bottom: 30px;
+    line-height: 30px;
+    color: #757575;
+
+}
+
+.about-info{
+    display: flex;
+    max-width: 782px;
+    justify-content: space-around;
+}
+#about{
+    padding-top: 130px;
+
+}
+
+#about .about-container{
+     width: 66%;
+   max-width: 1140px;
+    /* border: 1px solid brown; */
+    background-color: #FFF8F3;
+    text-align: center;
+    margin: 0 auto;
+    padding: 131px 156px;;
+}
+
+.about-info .info-card p{
+    line-height: 30px;
+    font-size: 18px;
+    color: #757575;
+}
+
+.about-info .info-card h4{
+    line-height: 30px;
+    
+
+}
+
+#skills{
+    padding-top: 130px;
+}
+
+#skills .skills-container{
+    width: 66%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+#skills .skills-container .skill-box{
+    display: flex;
+    gap: 24px;
+}
+
+.skill-box .skill-card{
+    padding: 30px;
+    /* border: 1px solid #a52a2a; */
+    max-width: 267px;
+    box-shadow: 0 6px 50px 0 #00000055;
+}
+
+.skill-box .skill-card img{
+    width: 44px;
+    margin: 30px;
+    
+}
+
+.skill-box .skill-card h3{
+    margin-bottom: 20px;
+}
+
+.skill-card h3{
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.skill-card p{
+    color: #757575;
+    font-size: 16px;
+    line-height: 28px;
+}
+
+
